src/objects/FieldMaskingTypeMeta__mdt.object
<CustomObject>
    <fields>
        <fullName>Format_10__c</fullName>
        <label>Format 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Format_1__c</fullName>
        <label>Format 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Format_2__c</fullName>
        <label>Format 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FieldMaskingTypeMeta</label>
    <pluralLabel>FieldMaskingTypeMeta</pluralLabel>
</CustomObject>